feat: API autenticada e mesma origem (MOT-18)
